src/objects/Apttus_Config2__AssetTransactionHistory__c.object
<CustomObject>
    <description>Represents a transaction that records the change to an asset</description>
    <fields>
        <fullName>Apttus_Config2__Action__c</fullName>
        <description>The asset action</description>
        <inlineHelpText>The asset action</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item</description>
        <inlineHelpText>ID of the associated asset line item</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Asset Transaction History (From)</relationshipLabel>
        <relationshipName>AssetTransactionHistoryFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChangeInAssetARR__c</fullName>
        <description>The change in the asset annual recurring revenue due to the transaction</description>
        <inlineHelpText>The change in the asset annual recurring revenue due to the transaction</inlineHelpText>
        <label>Change In Asset ARR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChangeInAssetMRR__c</fullName>
        <description>The change in the asset monthly recurring revenue due to the transaction</description>
        <inlineHelpText>The change in the asset monthly recurring revenue due to the transaction</inlineHelpText>
        <label>Change In Asset MRR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChangeInAssetTCV__c</fullName>
        <description>The change in the asset TCV due to the transaction</description>
        <inlineHelpText>The change in the asset TCV due to the transaction</inlineHelpText>
        <label>Change In Asset TCV</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveStartDate__c</fullName>
        <description>The transaction effective start date</description>
        <inlineHelpText>The transaction effective start date</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactARR__c</fullName>
        <description>The change in annual recurring revenue due to the transaction</description>
        <inlineHelpText>The change in annual recurring revenue due to the transaction</inlineHelpText>
        <label>Impact ARR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactMRR__c</fullName>
        <description>The change in monthly recurring revenue due to the transaction</description>
        <inlineHelpText>The change in monthly recurring revenue due to the transaction</inlineHelpText>
        <label>Impact MRR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ImpactTCV__c</fullName>
        <description>The change in TCV due to the transaction</description>
        <inlineHelpText>The change in TCV due to the transaction</inlineHelpText>
        <label>Impact TCV</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order</description>
        <inlineHelpText>ID of the associated order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Asset Transaction History</relationshipLabel>
        <relationshipName>AssetTransactionHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Asset Transaction History</relationshipLabel>
        <relationshipName>AssetTransactionHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list item</description>
        <inlineHelpText>ID of the associated price list item</inlineHelpText>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Asset Transaction History</relationshipLabel>
        <relationshipName>AssetTransactionHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToAssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated changed to asset line item</description>
        <inlineHelpText>ID of the associated changed to asset line item</inlineHelpText>
        <label>Changed To Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Asset Transaction History (To)</relationshipLabel>
        <relationshipName>AssetTransactionHistoryTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TransactionDate__c</fullName>
        <description>The asset transaction date</description>
        <inlineHelpText>The asset transaction date</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Asset Transaction History</label>
    <nameField>
        <displayFormat>ATH-{00000000}</displayFormat>
        <label>Txn Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Transaction History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>